# jupyter-imandra

./: .gitignore  .gitmodules  .merlin  Dockerfile  Dockerfile.jupyterhub  Makefile  README.md  _tags  decompose1.ipynb  imandra_intro.ipynb  jucaml.ml  jupyter-imandra.opam  kernel.json  opam  requirements.txt  simplicity.ipynb  stimsym_examples.ipynb
example_notebooks/: decompose1.ipynb  imandra_intro.ipynb  sudoku.ipynb
imandra/: kernel.json
jupyter-imandra/: kernel.json  kernel_info.json
jupyter-imandra/imandra-theme/base/js/: page.js
jupyter-imandra/imandra-theme/custom/: custom.css  custom.js
jupyterhub/: .dockerignore  Dockerfile.k8s-hub  Dockerfile.landing-page  Dockerfile.singleuser  README.md  config.yaml
jupyterhub/jupyterhub-imandra/: Chart.yaml  requirements.yaml  values.yaml
jupyterhub/jupyterhub-imandra/charts/jupyterhub/templates/: ingress.yaml
jupyterhub/jupyterhub-imandra/charts/jupyterhub/templates/proxy/: deployment.yaml  ingress-internal.yaml
jupyterhub/jupyterhub-imandra/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  networkpolicy.yaml  service.yaml
jupyterhub/jupyterhub-imandra/templates/landing-page/: deployment.yaml  service.yaml
jupyterhub/k8s-hub/templates/: login.html
jupyterhub/k8s-hub/tmpauthenticator/: __init__.py
jupyterhub/landing-page/: index.html  style.css  style.css.map  style.sass  style.scss
jupyterhub/landing-page/.sass-cache/128b65cb049b99591cb896cc616378adf8c5cefb/: style.sassc
jupyterhub/landing-page/.sass-cache/4d4c989c12ad400954a2f04c44e89114a3a8fd95/: style.sassc
jupyterhub/landing-page/.sass-cache/f8b95eeb680a6cd567a57bd9e193fa68d23a348a/: style.sassc
jupyterhub/landing-page/js/: custom.js  typewriter.js
jupyterhub/landing-page/loader-page/: loader.html
kernel/: kernel.json
nbextensions/nbimandra/: setup.py
nbextensions/nbimandra/nbimandra/static/: main.js  nbimandra.css
share/kernelspec/imandra/: kernel.json
share/kernelspec/imandra-reason/: kernel-no-backend.json  kernel.json
share/nbextensions/nbimandra/: setup.py
share/nbextensions/nbimandra-theme/: setup.py
share/nbextensions/nbimandra-theme/nbimandra-theme/: __init__.py
share/nbextensions/nbimandra-theme/nbimandra-theme/templates/: _page_logo.html  notebook.html  page.html  terminal.html
share/nbextensions/nbimandra-theme/nbimandra-theme/templates/jupyterhub-singleuser/: page.html
share/nbextensions/nbimandra/nbimandra/: __init__.py
share/nbextensions/nbimandra/nbimandra/static/: alternatives.js  carrotsearch.foamtree.js  fold.js  graphviz.js  main.js  nbimandra.css  regions-styles.js  regions.js  styles.css  styles.js
src/: Decompose_render.ml  Doc_render.ml  Doc_render.mli  Evaluator.ml  Log.ml  Log.mli  Logs_reporter.ml  Logs_reporter.mli  dune  evaluator.ml  evaluator.mli  jbuild  jymandra.ml
