opam-version: "1.2"
name: "jupyter_imandra"
version: "0.0.1"
maintainer: "Simon Cruanes <smon@aestheticintegration.com>"
authors: ["Simon Cruanes <simon@aestheticintegration.com>" "Kostya"]
homepage: "http://www.imandra.ai/"
bug-reports: "Simon <simon@aestheticintegration.com>"
license: "Commercial/Restricted/Confidential"
dev-repo: "https://github.com/AestheticIntegration/jupyter_imandra.git"
build: [
  ["jbuilder" "build" "@install"]
]
install: [
  ["jbuilder" "install"]
]
depends: [
  "jbuilder" {build}
  "ocaml-compiler-libs"
  "containers"
  "imandra"
  "jupyter-kernel"
  "tyxml"
  "curly"
]

