opam-version: "2.0"
name: "jupyter_imandra"
version: "0.0.1"
synopsis: "A very simple Jupyter kernel for Imandra"
maintainer: "Simon Cruanes <smon@aestheticintegration.com>"
authors: ["Simon Cruanes <simon@aestheticintegration.com>" "Kostya"]
homepage: "http://www.imandra.ai/"
bug-reports: "Simon <simon@aestheticintegration.com>"
license: "Commercial/Restricted/Confidential"
dev-repo: "git+https://github.com/AestheticIntegration/jupyter_imandra.git"
build: [
  ["dune" "build" "@install"]
]
depends: [
  "dune" {build}
  "base-bytes"
  "ocaml-compiler-libs"
  "containers"
  "imandra"
  "jupyter-kernel"
  "tyxml"
  "curly"
  "octavius"
  "uuidm"
]

