opam-version: "2.0"
name: "jupyter_imandra"
version: "0.0.4"
synopsis: "A very simple Jupyter kernel for Imandra"
maintainer: "Simon Cruanes <simon@aestheticintegration.com>"
authors: ["Simon Cruanes <simon@aestheticintegration.com>" "Kostya"]
homepage: "http://www.imandra.ai/"
bug-reports: "Simon <simon@aestheticintegration.com>"
license: "Commercial/Restricted/Confidential"
dev-repo: "git+https://github.com/AestheticIntegration/jupyter_imandra.git"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
  "ocaml-compiler-libs" {build}
  "containers"
  "imandra-client"
  "jupyter-kernel"
  "tyxml"
  "uuidm"
  "logs"
  "ISO8601"
  "yojson" { >= "1.6" }
  "imandra-tools"
]
