(library
 (name jupyter_imandra)
 (public_name jupyter-imandra)
 (modules :standard \ jymandra evaluator)
  (flags :standard -safe-string -warn-error -3)
 (libraries containers imandra.lib tyxml uuidm yojson))

(executable
  (name jymandra)
  (public_name jymandra)
  (package jupyter-imandra)
  (modes byte)
  (modules jymandra evaluator)
  (flags :standard -safe-string -warn-error -3)
  (libraries jupyter-kernel containers containers.unix unix
             compiler-libs.common compiler-libs.toplevel jupyter-imandra
             imandra.lib imandra.batbmc z3 tyxml curly bytes octavius uuidm)
  )

(install
  (section share)
  (package jupyter-imandra)
  (files (../share/kernelspec/imandra/kernel.json as kernelspec/imandra/kernel.json)
         (../share/kernelspec/imandra-reason/kernel.json as kernelspec/imandra-reason/kernel.json))
  )
