(library
 (name jupyter_imandra)
 (public_name jupyter-imandra)
 (modules :standard \ jymandra evaluator)
  (flags :standard -safe-string -warn-error -3-32)
 (libraries containers imandra-client.lib tyxml uuidm yojson imandra-tools))

(executable
  (name jymandra)
  (public_name jymandra)
  (package jupyter-imandra)
  (modes byte)
  (modules jymandra evaluator)
  (flags :standard -safe-string -warn-error -3-32 -linkall)
  (libraries jupyter-kernel containers containers.unix unix
             compiler-libs.common compiler-libs.toplevel jupyter-imandra
             imandra-client.lib tyxml curly bytes octavius uuidm)
  )

(install
  (section share)
  (package jupyter-imandra)
  (files (../share/kernelspec/imandra/kernel.json as kernelspec/imandra/kernel.json)
         (../share/kernelspec/imandra-reason/kernel.json as kernelspec/imandra-reason/kernel.json))
  )
