(library
 (name jupyter_imandra)
 (public_name jupyter-imandra)
 (modules :standard \ jymandra evaluator)
  (flags :standard -safe-string -warn-error -3-32)
 (libraries containers imandra-client.lib tyxml uuidm yojson logs
            ISO8601 imandra-tools))

(executable
  (name jymandra)
  (public_name jymandra)
  (package jupyter-imandra)
  (modes byte)
  (modules jymandra evaluator)
  (flags :standard -safe-string -warn-error -3-32 -linkall)
  (libraries digestif ; HACK: needs to be first -_-
             jupyter-kernel containers containers.unix unix logs
             compiler-libs.common compiler-libs.toplevel jupyter-imandra
             imandra-client.lib imandra-document imandra-document.tyxml
             tyxml curly bytes uuidm)
  )

(install
  (section share)
  (package jupyter-imandra)
  (files (../share/kernelspec/imandra/kernel.json as kernelspec/imandra/kernel.json)
         (../share/kernelspec/imandra-reason/kernel.json as kernelspec/imandra-reason/kernel.json))
  )
